# bc-4-win

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.in  NEWS  README  README.md  WINDOWS.md  aclocal.m4  config.h  config.h.in  configure  configure.ac
bc/: Makefile.am  Makefile.in  bc.c  bc.h  bc.y  bcdefs.h  const.h  execute.c  fix-libmath.sed  global.c  global.h  libmath.b  libmath.h  load.c  main.c  proto.h  scan.c  scan.l  storage.c  util.c  warranty.c
dc/: Makefile.am  Makefile.in  array.c  dc-proto.h  dc-regdef.h  dc.c  dc.h  eval.c  input.c  misc.c  numeric.c  stack.c  string.c
doc/: Makefile.in  bc.info  bc.texi  dc.info  dc.texi
h/: getopt.h  number.h
lib/: Makefile.am  Makefile.in  getopt.c  getopt1.c  number.c  testmul.c
